new google maps added

--- a/index.html
+++ b/index.html
@@ -724,7 +724,7 @@
                         <div class="modal-body">
                             <h2>Faculty of Organization and Informatics</h2>
                             <hr class="star-primary">
-                            <iframe width="600" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Pavlinska%20ulica%202%2C%20Vara%C5%BEdin%2C%20Hrvatska&key=AIzaSyC6M00Xg-SXZVRaQaAZ2ZCVWjJ1g3OwJRU"></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5512.15322488208!2d16.336802842827666!3d46.308315949482946!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4768aad79dfe8fa9%3A0x315735b0e6cac4fd!2sPavlinska+ul.+2%2C+University+of+Zagreb%2C+42000%2C+Vara%C5%BEdin%2C+Croatia!5e0!3m2!1sen!2s!4v1414970025970" width="600" height="450" frameborder="0" style="border:0"></iframe>
                             <p>More description incoming</p>
                             <ul class="list-inline item-details">
                                 <li>Faculty Website:
