--- a/index.html
+++ b/index.html
@@ -725,7 +725,8 @@
                             <h2>Faculty of Organization and Informatics</h2>
                             <hr class="star-primary">
                             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5512.15322488208!2d16.336802842827666!3d46.308315949482946!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4768aad79dfe8fa9%3A0x315735b0e6cac4fd!2sPavlinska+ul.+2%2C+University+of+Zagreb%2C+42000%2C+Vara%C5%BEdin%2C+Croatia!5e0!3m2!1sen!2s!4v1414970025970" width="600" height="450" frameborder="0" style="border:0"></iframe>
-                            <p>More description incoming</p>
+                            <hr>
+                            <p>Master of Informatics study</p>
                             <ul class="list-inline item-details">
                                 <li>Faculty Website:
                                     <strong><a href="http://www.foi.unizg.hr/">Link</a>
@@ -737,6 +738,44 @@
                                 </li>
                                 <li>Timeline:
                                     <strong>2013-Present
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="portfolio-modal modal fade" id="educationModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Faculty of Organization and Informatics</h2>
+                            <hr class="star-primary">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d5512.15322488208!2d16.336802842827666!3d46.308315949482946!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4768aad79dfe8fa9%3A0x315735b0e6cac4fd!2sPavlinska+ul.+2%2C+University+of+Zagreb%2C+42000%2C+Vara%C5%BEdin%2C+Croatia!5e0!3m2!1sen!2s!4v1414970025970" width="600" height="450" frameborder="0" style="border:0"></iframe>
+                            <hr>
+                            <p>Bachelor of Informatics study</p>
+                            <ul class="list-inline item-details">
+                                <li>Faculty Website:
+                                    <strong><a href="http://www.foi.unizg.hr/">Link</a>
+                                    </strong>
+                                </li>
+                                <li>About Study:
+                                    <strong><a href="http://www.foi.unizg.hr/buduci-studenti/upisi/pds/ips">Link</a>
+                                    </strong>
+                                </li>
+                                <li>Timeline:
+                                    <strong>2010-2013
                                     </strong>
                                 </li>
                             </ul>
