--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Petra Bilić</title>
+    <title>Petra Bilić Personal Website</title>
 
     <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -80,8 +80,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive circle-image" src="img/profile.png" alt="">
-
+                    <div class="img-responsive circle-image"></div>
+                    
 
                     </div>
                     <div class="intro-text">
