--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="img-responsive circle-image"></div>
                     
+                    <img class="img-responsive circle-image" src="img/profile.png" alt="">
+
 
                     </div>
                     <div class="intro-text">
