--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                     <div class="intro-text">
                         <span class="name">Petra Bilić</span>
                         <hr class="star-light">
-                        <span class="skills">Business intelligence - Data analysis - Database administration</span>
+                        <span class="skills">Data analyst - Database administrator</span>
                     </div>
                 </div>
             </div>
