marketing plan update

--- a/index.html
+++ b/index.html
@@ -620,21 +620,31 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Project Title</h2>
+                            <h2>Marketing plan - pcelice</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/circus.png" class="img-responsive img-centered" alt="">
-                            <p>Use this area of the page to describe your project. The icon above is part of a free icon set by <a href="https://sellfy.com/p/8Q9P/jV3VZ/">Flat Icons</a>. On their website, you can download their free set with 16 icons, or you can purchase the entire set with 146 icons for only $12!</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
-                                    <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
+                                <li>Paper:
+                                    <strong><a href="https://www.dropbox.com/sh/7zjt1fsvurtunjr/AADP1xyLCSo0LaXD0DE9mubPa/portfolio/2011december_marketing_plan_hr/Marketinski%20plan-Pcelice.docx?dl=1">Download</a>
+                                    </strong>
+                                </li>
+                            </ul>
+                            <img src="img/portfolio/marketing-plan.png" class="img-responsive img-centered" alt="">
+                            <p>Marketing plan for new product at the market</p>
+                            <ul class="list-inline item-details">
+                                <li>Language:
+                                    <strong>Croatian
+                                    </strong>
+                                </li>
+                                <li>Type:
+                                    <strong>Research paper
                                     </strong>
                                 </li>
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">April 2014</a>
+                                    <strong>December 2011
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">Web Development</a>
+                                <li>About:
+                                    <strong>Marketing research
                                     </strong>
                                 </li>
                             </ul>
