skype button added

--- a/index.html
+++ b/index.html
@@ -89,6 +89,21 @@
                         <span class="name">Petra Bilić</span>
                         <hr class="star-light">
                         <span class="skills">Data analyst - Database administrator</span>
+                        <hr class="star-light">
+                        <span>
+                            Having trouble finding me on skype? 
+                            <script type="text/javascript" src="http://www.skypeassets.com/i/scom/js/skype-uri.js"></script>
+                                <div id="SkypeButton_Call_live:petra.bilic_1">
+                                  <script type="text/javascript">
+                                    Skype.ui({
+                                      "name": "call",
+                                      "element": "SkypeButton_Call_live:petra.bilic_1",
+                                      "participants": ["live:petra.bilic"],
+                                      "imageSize": 32
+                                    });
+                                  </script>
+                                </div>
+                        </span>
                     </div>
                 </div>
             </div>
