skype call button added

--- a/index.html
+++ b/index.html
@@ -569,6 +569,17 @@
                         });
                       </script>
                     </div>
+                    <script type="text/javascript" src="http://www.skypeassets.com/i/scom/js/skype-uri.js"></script>
+                    <div id="SkypeButton_Call_live:petra.bilic_1">
+                      <script type="text/javascript">
+                        Skype.ui({
+                          "name": "call",
+                          "element": "SkypeButton_Call_live:petra.bilic_1",
+                          "participants": ["live:petra.bilic"],
+                          "imageSize": 32
+                        });
+                      </script>
+                    </div>
                 </div>
             </div>
             <div class="row">
