--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
                 <div class="col-lg-12 text-center">
                     <h2>Contact Me</h2>
                     <hr class="star-primary">
-                    Having trouble finding me on skype? Click here!
+                    Having trouble finding me on Skype? Click here!
                     <script type="text/javascript" src="http://www.skypeassets.com/i/scom/js/skype-uri.js"></script>
                     <div id="SkypeButton_Call_live:petra.bilic_1">
                       <script type="text/javascript">
@@ -569,7 +569,7 @@
                         });
                       </script>
                     </div>
-
+                    or send me an email!
                 </div>
             </div>
             <div class="row">
