using form below

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                         });
                       </script>
                     </div>
-                    or send me an email!
+                    or send me an email with form below!
 
                 </div>
             </div>
