--- a/index.html
+++ b/index.html
@@ -1024,7 +1024,7 @@
                                 </li>
                                 
                             </ul>
-                            <img src="img/portfolio/organization_management.gif" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/kmp.jpg" class="img-responsive img-centered" alt="">
                             <p>Student research paper about Knuth-Morris-Pratt Algorithm (KMP) for  string searching (matching) problem</p>
                             <ul class="list-inline item-details">
                                 <li>Language:
@@ -1040,7 +1040,7 @@
                                     </strong>
                                 </li>
                                 <li>About:
-                                    <strong>Student research project
+                                    <strong>Student research paper
                                     </strong>
                                 </li>
                             </ul>
@@ -1051,6 +1051,7 @@
             </div>
         </div>
     </div>
+
 
     <!-- Education Modals -->
     <div class="portfolio-modal modal fade" id="educationModal1" tabindex="-1" role="dialog" aria-hidden="true">
