ray tracing project added

--- a/index.html
+++ b/index.html
@@ -149,6 +149,23 @@
                                                         <strong>KMP Algorithm
                                                         </strong>
                                                     </div>
+                                                    <small>Student research paper
+                                                    </small>
+                                                </div>
+                                            </div>
+                                            <img src="img/portfolio/kmp.jpg" class="img-responsive" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="col-sm-4 portfolio-item">
+                                        <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
+                                            <div class="caption">
+                                                <div class="caption-content">
+                                                    
+                                                    <div class="center-text">
+                                                        <i class="fa fa-search-plus fa-1x"></i>
+                                                        <strong>Ray Tracing
+                                                        </strong>
+                                                    </div>
                                                     <small>Student research project
                                                     </small>
                                                 </div>
@@ -1052,6 +1069,61 @@
         </div>
     </div>
 
+    <div class="portfolio-modal modal fade" id="portfolioModal8" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Ray Tracing</h2>
+                            <hr class="star-primary">
+                            <ul class="list-inline item-details">
+                                <li>Paper:
+                                    <strong><a href="https://www.dropbox.com/sh/7zjt1fsvurtunjr/AAC4s6G5nXVZ3_9XHduzNFA-a/portfolio/2013april_ray_tracing_hr/Ray%20tracing.pdf?dl=1">Download</a>
+                                    </strong>
+                                </li>
+                                <li>Code:
+                                    <strong>
+                                        <a href="https://www.dropbox.com/sh/7zjt1fsvurtunjr/AABfSvpEgQbesbacObkz51_Na/portfolio/2013april_ray_tracing_hr/Zadaci?dl=1">
+                                            Download
+                                        </a>
+                                    </strong>
+                                </li>
+                                
+                            </ul>
+                            <img src="img/portfolio/ray_tracing.jpg" class="img-responsive img-centered" alt="">
+                            <p>Student project that includes research paper about mathematical background of ray tracing technique for generating an image by tracing the path of light through pixels in an image plane and simulating the effects of its encounters with virtual objects; models in Sage; three-dimensional graphics in Povray; implementation in C++</p>
+                            <ul class="list-inline item-details">
+                                <li>Language:
+                                    <strong>Croatian
+                                    </strong>
+                                </li>
+                                <li>Type:
+                                    <strong>Research project
+                                    </strong>
+                                </li>
+                                <li>Date:
+                                    <strong>April 2013
+                                    </strong>
+                                </li>
+                                <li>About:
+                                    <strong>Student research project
+                                    </strong>
+                                </li>
+                            </ul>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Education Modals -->
     <div class="portfolio-modal modal fade" id="educationModal1" tabindex="-1" role="dialog" aria-hidden="true">
