--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/kmp.jpg" class="img-responsive" alt="">
+                                            <img src="img/portfolio/ray_tracing.jpg" class="img-responsive" alt="">
                                         </a>
                                     </div>
                                 </div>
