--- a/index.html
+++ b/index.html
@@ -173,6 +173,23 @@
                                             <img src="img/portfolio/ray_tracing.jpg" class="img-responsive" alt="">
                                         </a>
                                     </div>
+                                    <div class="col-sm-4 portfolio-item">
+                                        <a href="#portfolioModal8" class="portfolio-link" data-toggle="modal">
+                                            <div class="caption">
+                                                <div class="caption-content">
+                                                    
+                                                    <div class="center-text">
+                                                        <i class="fa fa-search-plus fa-1x"></i>
+                                                        <strong>Transformation of conceptual model to relational scheme
+                                                        </strong>
+                                                    </div>
+                                                    <small>Bachelor thesis
+                                                    </small>
+                                                </div>
+                                            </div>
+                                            <img src="img/portfolio/database_record.png" class="img-responsive" alt="">
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                 
