--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                                         </a>
                                     </div>
                                     <div class="col-sm-4 portfolio-item">
-                                        <a href="#portfolioModal10" class="portfolio-link" data-toggle="modal">
+                                        <a href="#portfolioModal11" class="portfolio-link" data-toggle="modal">
                                             <div class="caption">
                                                 <div class="caption-content">
                                                     
@@ -222,6 +222,23 @@
                                                 </div>
                                             </div>
                                             <img src="img/portfolio/sql_injection.jpg" class="img-responsive" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="col-sm-4 portfolio-item">
+                                        <a href="#portfolioModal12" class="portfolio-link" data-toggle="modal">
+                                            <div class="caption">
+                                                <div class="caption-content">
+                                                    
+                                                    <div class="center-text">
+                                                        <i class="fa fa-search-plus fa-1x"></i>
+                                                        <strong>Logic Programming: Game Twixt
+                                                        </strong>
+                                                    </div>
+                                                    <small>Student research project
+                                                    </small>
+                                                </div>
+                                            </div>
+                                            <img src="img/portfolio/logic_game.jpg" class="img-responsive" alt="">
                                         </a>
                                     </div>
                                 </div>
