--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/logic_game.jpg" class="img-responsive" alt="">
+                                            <img src="img/portfolio/logic_game.png" class="img-responsive" alt="">
                                         </a>
                                     </div>
                                 </div>
