--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                                   
                                 </center>
                             </div>
-                            <!-- train section -->
+                            <!-- 2013 -->
                             <div class="bhoechie-tab-content">
                                 <div class="row">
                                     
@@ -153,7 +153,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/kmp.jpg" class="img-responsive" alt="">
+                                            <!-- <img src="img/portfolio/kmp.jpg" class="img-responsive" alt=""> -->
                                         </a>
                                     </div>
                                     <div class="col-sm-4 portfolio-item">
@@ -170,7 +170,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/ray_tracing.jpg" class="img-responsive" alt="">
+                                            <!-- <img src="img/portfolio/ray_tracing.jpg" class="img-responsive" alt=""> -->
                                         </a>
                                     </div>
                                     <div class="col-sm-4 portfolio-item">
@@ -187,7 +187,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/database_record.png" class="img-responsive" alt="">
+                                            <!-- <img src="img/portfolio/database_record.png" class="img-responsive" alt=""> -->
                                         </a>
                                     </div>
                                     <div class="col-sm-4 portfolio-item">
@@ -204,7 +204,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/class_schedule.gif" class="img-responsive" alt="">
+                                            <!-- <img src="img/portfolio/class_schedule.gif" class="img-responsive" alt=""> -->
                                         </a>
                                     </div>
                                     <div class="col-sm-4 portfolio-item">
@@ -221,7 +221,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/sql_injection.jpg" class="img-responsive" alt="">
+                                            <!-- <img src="img/portfolio/sql_injection.jpg" class="img-responsive" alt=""> -->
                                         </a>
                                     </div>
                                     <div class="col-sm-4 portfolio-item">
@@ -238,7 +238,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/logic_game.png" class="img-responsive" alt="">
+                                            <!-- <img src="img/portfolio/logic_game.png" class="img-responsive" alt=""> -->
                                         </a>
                                     </div>
                                 </div>
