--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/service_catalog.jpg" class="img-responsive" alt="">
+                                            <!-- <img src="img/portfolio/service_catalog.jpg" class="img-responsive" alt=""> -->
                                         </a>
                                     </div>
                                     <div class="col-sm-4 portfolio-item">
@@ -278,7 +278,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/restaurant_database.jpg" class="img-responsive" alt="">
+                                            <!-- <img src="img/portfolio/restaurant_database.jpg" class="img-responsive" alt=""> -->
                                         </a>
                                     </div>
                                     <div class="col-sm-4 portfolio-item">
@@ -295,7 +295,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/organization_management.gif" class="img-responsive" alt="">
+                                            <!-- <img src="img/portfolio/organization_management.gif" class="img-responsive" alt=""> -->
                                         </a>
                                     </div>
                                 </div>
@@ -318,7 +318,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/backtracking.gif" height="260" class="img-responsive" alt="">
+                                           <!--  <img src="img/portfolio/backtracking.gif" height="260" class="img-responsive" alt=""> -->
                                         </a>
                                     </div>
                                     
@@ -335,7 +335,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/finance_plan.jpg" width="360px" height="260px" class="img-responsive" alt="">
+                                            <!-- <img src="img/portfolio/finance_plan.jpg" width="360px" height="260px" class="img-responsive" alt=""> -->
                                         </a>
                                     </div>
                                    
@@ -353,7 +353,7 @@
                                                     </small>
                                                 </div>
                                             </div>
-                                            <img src="img/portfolio/marketing-plan.png" class="img-responsive" alt="">
+                                            <!-- <img src="img/portfolio/marketing-plan.png" class="img-responsive" alt=""> -->
                                         </a>
                                     </div>
                                 </div>
